--- a/src/index.scss
+++ b/src/index.scss
@@ -821,9 +821,9 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
   top: 15px;
   right: 15px;
 }
-.map-icon{
-  color:#aaa;
-}
+// .map-icon{
+//   color:#aaa;
+// }
 .plus-icon{
   color:#fff;
   background-image: linear-gradient(to right, #ff8b92, #feb683);
@@ -2184,5 +2184,9 @@ body .main-header .navbar{
 }
 .navbar-brand{
   padding: 0;
+}
+.map-icon{
+  color:$white;
+  padding: 0 6px;
 }
 
