category&&crop_module_12-11-2019

--- a/src/index.scss
+++ b/src/index.scss
@@ -1339,7 +1339,9 @@ svg{
  // font-size: 15px;
 
 }
-
+textarea.form-control{
+  resize: none;
+}
 /****************************List Crop************************/
 .form-search{
   //display: flex;
