bugs ovetory date selection

--- a/src/index.scss
+++ b/src/index.scss
@@ -1192,6 +1192,7 @@ input.form-control.search-btn:focus {
 }
 .table thead th{
   border-bottom: 1px solid $table-border;
+  font-size: 14px;
 }
 .chart-box{
   padding: 30px 0px 0px;
