--- a/src/index.scss
+++ b/src/index.scss
@@ -808,6 +808,7 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
 }
 .sub-farm{
   text-align: left;
+  word-wrap: break-word;
 }
 .fa{
   padding: 2%;
@@ -846,7 +847,7 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
   //margin: 36px 0 32px 40px;
   padding-bottom: 10px;
   position: relative;
-  height: 315px;
+  height: 266px;
 }
 .farm-tab{
   margin: 20px;
@@ -1778,7 +1779,21 @@ padding: 5px;
 /****************************Shop Details Section************************/
 .shop-centext{
   width: 100%; 
-  height: 315px
+  height: 266px
+}
+.shop-btn{
+  color:$white;
+  background-color: #82CAFF;
+  border: none;
+  border-radius: 5px;
+  padding: 6px;
+ // font-size:14px;
+  display: inline-block;
+  white-space: nowrap;
+  //width: 150px;
+  margin-left: 5px;
+  width: 100px;
+  font-size: 15px;
 }
 .main-shop{
   border-right: 1px inset;
