--- a/src/variables.scss
+++ b/src/variables.scss
@@ -32,6 +32,8 @@ $step-border:#e9e9e9;
 $step-bg: rgba(0,0,0,.12);
 $step-color:#6c757d;
 $select-border:#BA7EF7;
+$pale-violet-red:#DB7093;
+$deep-sea-blue:#82CAFF;
 $table-border:#dee2e6;
 $graph-color:#697a99;
 $farm-title:#868686;
