--- a/src/index.scss
+++ b/src/index.scss
@@ -1013,6 +1013,9 @@ input.form-control.search-btn:focus {
 .crop-section{
   width: 100%;
 }
+.rc-time-picker-clear{
+  display: none!important;
+}
 .crop-table{
   font-size: 15px ;
   background-color: $white;
