--- a/src/index.scss
+++ b/src/index.scss
@@ -208,7 +208,7 @@ background-size: cover;}
   display: flex;
   .label-title{
     white-space: nowrap;
-    padding-right: 15px;
+    padding-right: 18px;
   }
 }
 .daterangepicker td.active, .daterangepicker td.active:hover {
@@ -402,6 +402,7 @@ li {
   display: block;
   padding: 7px 0;
   font-family: $font-sans;
+  
 }
 li:hover .menu-link{
   border-image:$sidebar-active;
@@ -448,6 +449,132 @@ li .activate .menu-list i{
   background-position-x: -59px!important;
 }
 }
+
+
+
+
+/*side*/
+// .fa-2x {
+// font-size: 2em;
+// }
+// .fa {
+// position: relative;
+// display: table-cell;
+// width: 60px;
+// height: 36px;
+// text-align: center;
+// vertical-align: middle;
+// font-size:20px;
+// }
+
+
+// .main-menu:hover,nav.main-menu.expanded {
+// width:250px;
+// overflow:visible;
+// }
+
+// .main-menu {
+// background:#212121;
+// border-right:1px solid #e5e5e5;
+// position:absolute;
+// top:0;
+// bottom:0;
+// height:100%;
+// left:0;
+// width:60px;
+// overflow:hidden;
+// -webkit-transition:width .05s linear;
+// transition:width .05s linear;
+// -webkit-transform:translateZ(0) scale(1,1);
+// z-index:1000;
+// }
+
+// .main-menu>ul {
+// margin:7px 0;
+// }
+
+// .main-menu li {
+// display:block;
+// width:250px;
+// }
+
+// .main-menu li>a {
+// position:relative;
+// display:table;
+// border-collapse:collapse;
+// border-spacing:0;
+// color:#999;
+//  font-family: arial;
+// font-size: 14px;
+// text-decoration:none;
+// -webkit-transform:translateZ(0) scale(1,1);
+// -webkit-transition:all .1s linear;
+// transition:all .1s linear;
+  
+// }
+
+// .main-menu .nav-icon {
+// position:relative;
+// display:table-cell;
+// width:60px;
+// height:36px;
+// text-align:center;
+// vertical-align:middle;
+// font-size:18px;
+// }
+
+// .main-menu .nav-text {
+// position:relative;
+// display:table-cell;
+// vertical-align:middle;
+// width:190px;
+// }
+
+// .main-menu>ul.logout {
+// position:absolute;
+// left:0;
+// bottom:0;
+// }
+
+// .no-touch .scrollable.hover {
+// overflow-y:hidden;
+// }
+
+// .no-touch .scrollable.hover:hover {
+// overflow-y:auto;
+// overflow:visible;
+// }
+
+// a:hover,a:focus {
+// text-decoration:none;
+// }
+
+// nav {
+// -webkit-user-select:none;
+// -moz-user-select:none;
+// -ms-user-select:none;
+// -o-user-select:none;
+// user-select:none;
+// }
+
+// nav ul,nav li {
+// outline:0;
+// margin:0;
+// padding:0;
+// }
+// .main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
+// color:#fff;
+// background-color:#5fa2db;
+// }
+// .area {
+// float: left;
+// background: #e2e2e2;
+// width: 100%;
+// height: 100%;
+// }
+
+
+
 /****************************DashBoard page************************/
 .dashboard-bx{
   a{
@@ -1507,6 +1634,9 @@ select:focus {
 a.order-btn:hover {
   color: $white;
 }
+a.order-btn:hover {
+  text-decoration: none;
+}
 .bs-stepper-header {
   display: flex;
   align-items: center;
@@ -1953,6 +2083,21 @@ bottom: 50%;
   //width: 237px;
   width: 100px;
 }
+.data-search{
+    color:$white;
+    background-image: $gradient-1;
+    border: none;
+    border-radius: 25px;
+    height: 25px;
+    margin-top: 6px;
+}
+.data-search i.fa.fa-search {
+  font-size: 12px;
+}
+.sub-filter .form-control{
+  display: inline-flex;
+  width: 173px;
+}
 input.form-control.date-form {
   width: auto;
   height: 30px;
@@ -2229,6 +2374,9 @@ display: flex;
 @media screen and (min-width: 1200px) and (max-width: 1299px){
   .react-bootstrap-daterangepicker-container{
     max-width: 78%;
+  }
+  .sub-filter .form-control{
+    width: 143px;
   }
   
 }
