--- a/src/index.scss
+++ b/src/index.scss
@@ -2090,6 +2090,7 @@ bottom: 50%;
     border-radius: 25px;
     height: 25px;
     margin-top: 6px;
+    width:73px;
 }
 .data-search i.fa.fa-search {
   font-size: 12px;
