API RESPONSE CHANGES

--- a/src/index.scss
+++ b/src/index.scss
@@ -2458,3 +2458,6 @@ body .main-header .navbar{
   height: 36px;
   font-size: 15px;
 }
+.rc-time-picker-panel-select li:last-child{
+  display: none;
+}
