--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,6 +2,7 @@
 $background: #f5f5f5;
 $primary-color: #707070;
 $secondary-color:#bebebe;
+$inset-color:#EEEEEE;
 $white:#ffffff;
 $black:#000;
 $active-font-color:#ff8b92;
@@ -17,10 +18,12 @@ $input-status:#ced4da;
 $default:#E1E7ED;
 $btn-text:#9EA0A2;
 $btn-view:#706d6d;
+$tooltip-color:#6a7a99;
 $red:#d82525;
 $reject-red:#EF4A4A;
 $green:#359123;
 $accept-green:#1CCE46;
+$dark-sea-green:#8FBC8F;
 $gray:#ccc;
 $light-gray:#aaa;
 $dull-gray:#ddd;
