fetch retailer searches

--- a/src/index.scss
+++ b/src/index.scss
@@ -2219,6 +2219,7 @@ bottom: 50%;
     border-radius: 25px;
     height: 25px;
     margin-top: 6px;
+    // width:75px;
 }
 .data-search i.fa.fa-search {
   font-size: 12px;
