--- a/src/variables.scss
+++ b/src/variables.scss
@@ -19,6 +19,11 @@ $default:#E1E7ED;
 $btn-text:#9EA0A2;
 $btn-view:#706d6d;
 $tooltip-color:#6a7a99;
+$place-color:#BA68C8;
+$process-color:#5DADE2;
+$ship-color:#FFD64F;
+$center-color:#EB984E;
+$delivered-color:#F06292;
 $red:#d82525;
 $reject-red:#EF4A4A;
 $green:#359123;
