--- a/src/index.scss
+++ b/src/index.scss
@@ -206,6 +206,9 @@ background-size: cover;}
     color:$primary-color;
   }
 }
+.status-filter .drop-select:hover{
+  border-color: $active-font-color;
+}
 .code-filter{
   display: flex;
   .label-title{
@@ -355,6 +358,14 @@ button:focus {
  }
  .delete-btn{
    width: 70px;
+ }
+ .popup-cancel{
+   border: none;
+   background:none;
+   color:$btn-text;
+ }
+ .popup-cancel:hover{
+   color:$btn-text;
  }
 /****************************Header Section************************/
 li {
@@ -1567,8 +1578,8 @@ select:focus {
   height: 15px;
   line-height: 15px;
   position: relative;
-  right: 13px;
-  top: -72px;
+  right: 37px;
+  top: 25px;
 }
 .export-file:hover .tooltip-text {
   visibility: visible;
@@ -1618,11 +1629,15 @@ select:focus {
   font-size: 10px; 
   width: 76px;
   position: relative;
-  left: 41px;
+  left: 5px;
   margin-top: 5px;
 }
 .input-tip:hover .tooltip-text {
   visibility: visible;
+}
+.input-tip .form-control::placeholder {
+  font-size: 14px;
+  color:$primary-color;
 }
 // [data-tip] {
 // 	position:relative;
@@ -1721,12 +1736,12 @@ select:focus {
 }
 .cancel-btn{
   color:$white;
-  background-image: $gradient-2;
+  background-color:$reject-red;
   border:none;
   border-radius: 20px;
-  padding: 5px 15px 5px 9px;
+  padding: 3px 10px;
   border-color: $btn-text;
-  min-width: 125px;
+  //min-width: 125px;
   margin-left: 0;
   font-size: 15px;
   font-weight: unset;
@@ -1744,13 +1759,35 @@ select:focus {
   background-image: $gradient-1;
   border-radius: 15px;
   color: $white;
-  padding: 2px 5px;
+  padding: 2px 10px;
 }
 .update-btn{
-  background-image: $gradient-2;
+  //background-image: $gradient-2;
   color: $white;
   border: none;
   border-radius: 15px;
+  padding: 2px 10px;
+}
+.place-color{
+  background-color: $place-color;
+}
+.accept-color{
+  background-color:$accept-green;
+}
+.process-color{
+  background-color:$process-color;
+}
+.ship-color{
+  background-color:$ship-color;
+}
+.center-color{
+  background-color:$center-color;
+}
+.delivered-color{
+  background-color:$delivered-color
+}
+.cancel-color{
+  background-color:$reject-red;
 }
 .track-btn{
   border: none;
@@ -2226,7 +2263,8 @@ bottom: 50%;
 }
 .sub-filter .form-control{
   display: inline-flex;
-  width: 173px;
+// width: 173px;
+ width: 262px;
 }
 input.form-control.date-form {
   width: auto;
@@ -2316,6 +2354,9 @@ display: flex;
   //margin-right: 30px;
   margin-top: 10px;
 }
+.col-wrapper{
+  max-width: 28.333333%;
+}
 .sub-filter{
   margin-top: 10px;
 }
@@ -2347,6 +2388,7 @@ display: flex;
   font-size: 15px;
   line-height: 34px;
   height: 34px;
+  width: 65px;
   top: 12px;
   right: 20px;
   position: absolute;
@@ -2525,7 +2567,10 @@ display: flex;
     max-width: 78%;
   }
   .sub-filter .form-control{
-    width: 143px;
+   width:210px;
+  }
+  .sub-filter{
+    margin-left: 16px;
   }
   .sub-filter{
     margin-left: 17px;
@@ -2536,7 +2581,7 @@ display: flex;
     max-width: 71%;
   }
   .sub-filter{
-    margin-left: 17px;
+    margin-left: 0;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px){
@@ -2544,7 +2589,7 @@ display: flex;
     max-width: 67%;
   }
   .sub-filter{
-    margin-left: 17px;
+    margin-left: 0;
   }
 }
 
