--- a/src/index.scss
+++ b/src/index.scss
@@ -2660,5 +2660,5 @@ body .main-header .navbar{
   font-size: 15px;
 }
 .rc-time-picker-panel-select li:last-child{
-  display: none;
+  // display: none;
 }
