--- a/src/index.scss
+++ b/src/index.scss
@@ -117,6 +117,7 @@ h6{font-size: $h6}
 :focus {
   outline: none;
 }
+
 /****************************Login Page************************/
 
 .loginAlign{      
@@ -969,6 +970,10 @@ button.ant-btn.btn.btn-primary.ant-btn-primary:hover {
   color:$white;
   padding: 0 6px;
 }
+a.shop-map{
+  color:$white;
+  text-decoration: none;
+}
 .plus-icon{
   color:$white;
   background-image: $gradient-1;
@@ -1156,6 +1161,17 @@ input.form-control.search-btn:focus {
 .rc-time-picker-clear{
   display: none!important;
 }
+.rc-time-picker-input:focus {
+  border-color: $hover-focus;
+}
+.rc-time-picker-input{
+  width: 250px;
+  height: 36px;
+  font-size: 15px;
+}
+.rc-time-picker-panel-select li:last-child{
+  display: none;
+}
 .crop-table{
   font-size: 15px ;
   background-color: $white;
@@ -1317,7 +1333,11 @@ input.form-control.search-btn:focus {
   border-radius: 25px;
   color: $white;
 }
-
+.active-inactive{
+  border: 2px solid $orange;
+  border-radius: 5px;
+  color:$primary-color;
+}
 /****************************Dashboard section************************/
 .dashboard-table{
   padding: 20px 20px 0 20px
@@ -1689,10 +1709,11 @@ select:focus {
 // }
 
 /****************************Pagination Section************************/
+
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin: 20px 0;
+ // margin: 20px 0;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -2497,10 +2518,10 @@ display: flex;
   text-align: center;
 }
 .inactive{
-  background-color:  #ff7b00;
+  background-color: $orange;
   border: none;
   border-radius: 5px;
-  color: #fff;
+  color: $white;
   text-transform:capitalize;
   padding: 2px 7px;
   margin: auto;
@@ -2654,11 +2675,3 @@ body .main-header .navbar{
   padding: 0 6px;
 }
 
-.rc-time-picker-input{
-  width: 250px;
-  height: 36px;
-  font-size: 15px;
-}
-.rc-time-picker-panel-select li:last-child{
-  // display: none;
-}
