--- a/src/variables.scss
+++ b/src/variables.scss
@@ -26,6 +26,7 @@ $center-color:#EB984E;
 $delivered-color:#F06292;
 $red:#d82525;
 $reject-red:#EF4A4A;
+$disable:#EF531D;
 $green:#359123;
 $accept-green:#1CCE46;
 $dark-sea-green:#8FBC8F;
