--- a/src/index.scss
+++ b/src/index.scss
@@ -83,11 +83,28 @@ body{
   background-color: $background;
 }
 .sideBarmenu{
-  min-width: 252px;
-    max-width: 202x;
+ // min-width: 252px;
+  //  max-width: 202x;
     background: $white;
     transition: all 0.3s;
 }
+// .sidebar-toggle{
+//   // position: fixed;
+//   // top: 70px;
+//   // right: 0;
+//   // bottom: 0;
+//   // left: 20px;
+//   // -webkit-transition: all 0.5s ease;
+//   // -moz-transition: all 0.5s ease;
+//   // transition: all 0.5s ease;
+//   // z-index: 1;
+//   // font-size: 30px;
+//   // color: black;
+//   // width: 30px;
+//   // height: 30px;
+//   // cursor: pointer;
+// }
+
 // .main-container{
   
 //   /* margin-left: 210px; */
@@ -96,11 +113,24 @@ body{
 //   /* min-height: 100vh; */
 //   transition: all 0.3s;
 // }
+
 .main-container{
     width: calc(100vw - 252px);
     padding: 18px 18px 0 18px;
     transition: all 0.3s;
+
+    // -webkit-transition: all 0.5s ease;
+    // -moz-transition: all 0.5s ease;
+    // transition: all 0.5s ease;
+    // width: calc(100vw - 50px);
+    // padding: 18px 18px 0 18px;
+    // position: relative;
+    // z-index: 0;
+    // margin: 0 auto;
+    // color: #333;
+    
 }
+
 ul{
   margin-bottom: 0 !important;
 }
@@ -410,6 +440,13 @@ li {
   font-size: 17px;
   display: block;
   text-decoration: none;
+
+  opacity: .5;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+
 }
 .menu-link{
   border-left:8px solid transparent;
@@ -463,135 +500,51 @@ li .activate .menu-list i{
   background-position-x: -59px!important;
 }
 }
+
+// .navbar-nav{
+//   width: calc(100vw - 1123px);
+//   margin-top: 25px;
+// }
+
 .menu-btn{
   background: none;
   border: none;
   font-size: 20px;
   margin-left: 10px;
+
+  // position: fixed;
+  // top: 20px;
+  // right: 0;
+  // bottom: 0;
+  // left: 20px;
+  // -webkit-transition: all 0.5s ease;
+  // -moz-transition: all 0.5s ease;
+  // transition: all 0.5s ease;
+  // z-index: 1;
+  // font-size: 30px;
+  // color: black;
+  // width: 30px;
+  // height: 30px;
+  // cursor: pointer;
+
 }
 
-
-
-/*side*/
-// .fa-2x {
-// font-size: 2em;
+// .sideBarmenu .menu-btn{
+//   -webkit-transition: all 0.5s ease;
+//   -moz-transition: all 0.5s ease;
+//   transition: all 0.5s ease;
+//   position: absolute;
+//   top: 60px;
+//   right: 0;
+//   bottom: 0px;
+//   left: -3px;
+//  // width: 120px;
+//   height: 45px;
+//  // padding: 30px;
+//   //background: antiquewhite;
+//   color: #b0b0b0;
+//   z-index: 1; 
 // }
-// .fa {
-// position: relative;
-// display: table-cell;
-// width: 60px;
-// height: 36px;
-// text-align: center;
-// vertical-align: middle;
-// font-size:20px;
-// }
-
-
-// .main-menu:hover,nav.main-menu.expanded {
-// width:250px;
-// overflow:visible;
-// }
-
-// .main-menu {
-// background:#212121;
-// border-right:1px solid #e5e5e5;
-// position:absolute;
-// top:0;
-// bottom:0;
-// height:100%;
-// left:0;
-// width:60px;
-// overflow:hidden;
-// -webkit-transition:width .05s linear;
-// transition:width .05s linear;
-// -webkit-transform:translateZ(0) scale(1,1);
-// z-index:1000;
-// }
-
-// .main-menu>ul {
-// margin:7px 0;
-// }
-
-// .main-menu li {
-// display:block;
-// width:250px;
-// }
-
-// .main-menu li>a {
-// position:relative;
-// display:table;
-// border-collapse:collapse;
-// border-spacing:0;
-// color:#999;
-//  font-family: arial;
-// font-size: 14px;
-// text-decoration:none;
-// -webkit-transform:translateZ(0) scale(1,1);
-// -webkit-transition:all .1s linear;
-// transition:all .1s linear;
-  
-// }
-
-// .main-menu .nav-icon {
-// position:relative;
-// display:table-cell;
-// width:60px;
-// height:36px;
-// text-align:center;
-// vertical-align:middle;
-// font-size:18px;
-// }
-
-// .main-menu .nav-text {
-// position:relative;
-// display:table-cell;
-// vertical-align:middle;
-// width:190px;
-// }
-
-// .main-menu>ul.logout {
-// position:absolute;
-// left:0;
-// bottom:0;
-// }
-
-// .no-touch .scrollable.hover {
-// overflow-y:hidden;
-// }
-
-// .no-touch .scrollable.hover:hover {
-// overflow-y:auto;
-// overflow:visible;
-// }
-
-// a:hover,a:focus {
-// text-decoration:none;
-// }
-
-// nav {
-// -webkit-user-select:none;
-// -moz-user-select:none;
-// -ms-user-select:none;
-// -o-user-select:none;
-// user-select:none;
-// }
-
-// nav ul,nav li {
-// outline:0;
-// margin:0;
-// padding:0;
-// }
-// .main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
-// color:#fff;
-// background-color:#5fa2db;
-// }
-// .area {
-// float: left;
-// background: #e2e2e2;
-// width: 100%;
-// height: 100%;
-// }
-
 
 
 /****************************DashBoard page************************/
@@ -2659,6 +2612,11 @@ display: flex;
     width: 465px;
   }
 }
+
+// .navbar-nav{
+//   width: calc(100vw - 1000px);
+// }
+
 }
 // @media screen and (min-width: 991px) and (max-width: 1199px){
 //   .chart-box{
@@ -2692,7 +2650,6 @@ body .main-header .navbar{
   color:$white;
   padding: 0 6px;
 }
-
 .data-center{
   margin-left: 43%;
 }
