--- a/src/index.scss
+++ b/src/index.scss
@@ -88,22 +88,6 @@ body{
     background: $white;
     transition: all 0.3s;
 }
-// .sidebar-toggle{
-//   // position: fixed;
-//   // top: 70px;
-//   // right: 0;
-//   // bottom: 0;
-//   // left: 20px;
-//   // -webkit-transition: all 0.5s ease;
-//   // -moz-transition: all 0.5s ease;
-//   // transition: all 0.5s ease;
-//   // z-index: 1;
-//   // font-size: 30px;
-//   // color: black;
-//   // width: 30px;
-//   // height: 30px;
-//   // cursor: pointer;
-// }
 
 // .main-container{
   
@@ -115,19 +99,18 @@ body{
 // }
 
 .main-container{
-    width: calc(100vw - 252px);
+    //width: calc(100vw - 252px);
     padding: 18px 18px 0 18px;
     transition: all 0.3s;
 
-    // -webkit-transition: all 0.5s ease;
-    // -moz-transition: all 0.5s ease;
-    // transition: all 0.5s ease;
-    // width: calc(100vw - 50px);
-    // padding: 18px 18px 0 18px;
-    // position: relative;
-    // z-index: 0;
-    // margin: 0 auto;
-    // color: #333;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    width: calc(100vw - 50px);
+    padding: 18px 18px 0 18px;
+    position: relative;
+    z-index: 0;
+    margin: 0 auto;
     
 }
 
@@ -441,11 +424,11 @@ li {
   display: block;
   text-decoration: none;
 
-  opacity: .5;
-  cursor: pointer;
-  -webkit-transition: all 0.5s ease-in;
-  -moz-transition: all 0.5s ease-in;
-  transition: all 0.5s ease-in;
+  // opacity: .5;
+  // cursor: pointer;
+  // -webkit-transition: all 0.5s ease-in;
+  // -moz-transition: all 0.5s ease-in;
+  // transition: all 0.5s ease-in;
 
 }
 .menu-link{
@@ -500,11 +483,10 @@ li .activate .menu-list i{
   background-position-x: -59px!important;
 }
 }
-
-// .navbar-nav{
-//   width: calc(100vw - 1123px);
-//   margin-top: 25px;
-// }
+.navbar-nav{
+  width: calc(100vw - 1123px);
+  margin-top: 25px;
+}
 
 .menu-btn{
   background: none;
@@ -512,39 +494,35 @@ li .activate .menu-list i{
   font-size: 20px;
   margin-left: 10px;
 
-  // position: fixed;
-  // top: 20px;
-  // right: 0;
-  // bottom: 0;
-  // left: 20px;
-  // -webkit-transition: all 0.5s ease;
-  // -moz-transition: all 0.5s ease;
-  // transition: all 0.5s ease;
-  // z-index: 1;
-  // font-size: 30px;
-  // color: black;
-  // width: 30px;
-  // height: 30px;
-  // cursor: pointer;
+  position: fixed;
+  top: 20px;
+  right: 0;
+  bottom: 0;
+  left: 20px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  z-index: 1;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 
 }
 
-// .sideBarmenu .menu-btn{
-//   -webkit-transition: all 0.5s ease;
-//   -moz-transition: all 0.5s ease;
-//   transition: all 0.5s ease;
-//   position: absolute;
-//   top: 60px;
-//   right: 0;
-//   bottom: 0px;
-//   left: -3px;
-//  // width: 120px;
-//   height: 45px;
-//  // padding: 30px;
-//   //background: antiquewhite;
-//   color: #b0b0b0;
-//   z-index: 1; 
-// }
+.sideBarmenu .menu-btn{
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  position: absolute;
+  top: 60px;
+  right: 0;
+  bottom: 0px;
+  left: -3px;
+  height: 45px;
+  color: $primary-color;
+  z-index: 1; 
+}
 
 
 /****************************DashBoard page************************/
@@ -2612,10 +2590,9 @@ display: flex;
     width: 465px;
   }
 }
-
-// .navbar-nav{
-//   width: calc(100vw - 1000px);
-// }
+.navbar-nav{
+  width: calc(100vw - 1000px);
+}
 
 }
 // @media screen and (min-width: 991px) and (max-width: 1199px){
