--- a/src/index.scss
+++ b/src/index.scss
@@ -483,7 +483,7 @@ li .activate .menu-list i{
   background-position-x: -59px!important;
 }
 }
-.navbar-nav{
+.sidebar-toggle{
   width: calc(100vw - 1123px);
   margin-top: 25px;
 }
@@ -2590,7 +2590,7 @@ display: flex;
     width: 465px;
   }
 }
-.navbar-nav{
+.sidebar-toggle{
   width: calc(100vw - 1000px);
 }
 
