--- a/src/index.scss
+++ b/src/index.scss
@@ -99,18 +99,18 @@ body{
 // }
 
 .main-container{
-    //width: calc(100vw - 252px);
+    width: calc(100vw - 252px);
     padding: 18px 18px 0 18px;
     transition: all 0.3s;
 
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    width: calc(100vw - 50px);
-    padding: 18px 18px 0 18px;
-    position: relative;
-    z-index: 0;
-    margin: 0 auto;
+    // -webkit-transition: all 0.5s ease;
+    // -moz-transition: all 0.5s ease;
+    // transition: all 0.5s ease;
+    // width: calc(100vw - 50px);
+    // padding: 18px 18px 0 18px;
+    // position: relative;
+    // z-index: 0;
+    // margin: 0 auto;
     
 }
 
