--- a/src/index.scss
+++ b/src/index.scss
@@ -84,9 +84,9 @@ body{
 }
 .sideBarmenu{
   min-width: 252px;
-  max-width: 202x;
-    background: $white;
-    transition: all 0.3s;
+  max-width: 202px;
+  background: $white;
+  transition: all 0.3s;
 }
 
 // .main-container{
@@ -103,14 +103,13 @@ body{
     padding: 18px 18px 0 18px;
     transition: all 0.3s;
 
-    // -webkit-transition: all 0.5s ease;
-    // -moz-transition: all 0.5s ease;
-    // transition: all 0.5s ease;
-    // width: calc(100vw - 50px);
-    // padding: 18px 18px 0 18px;
-    // position: relative;
-    // z-index: 0;
-    // margin: 0 auto;
+  //   -webkit-transition: all 0.5s ease;
+  //   -moz-transition: all 0.5s ease;
+  //   transition: all 0.5s ease;
+  //  // width: calc(100vw - 50px);
+  //   position: relative;
+  //   z-index: 0;
+  //   margin: 0 auto;
     
 }
 
@@ -476,6 +475,8 @@ li:hover .menu-link{
 .report_manag i{ background-position: -19px -230px;}
 .faq i{ background-position: -19px -584px;}
 .static i{ background-position: -19px -92px;}
+.set i{ background-position: -19px -654px;}
+
 li:hover .menu-list i{
   background-position-x: -59px;
 }
@@ -483,10 +484,12 @@ li .activate .menu-list i{
   background-position-x: -59px!important;
 }
 }
-.sidebar-toggle{
-  width: calc(100vw - 1123px);
-  margin-top: 25px;
-}
+
+
+// .sidebar-toggle{
+//   //width: calc(100vw - 1123px);
+//   margin-top: 25px;
+// }
 
 // .menu-btn{
 //   background: none;
@@ -2591,7 +2594,7 @@ display: flex;
   }
 }
 .sidebar-toggle{
-  width: calc(100vw - 1000px);
+ // width: calc(100vw - 1000px);
 }
 
 }
