--- a/src/index.scss
+++ b/src/index.scss
@@ -83,8 +83,8 @@ body{
   background-color: $background;
 }
 .sideBarmenu{
-  min-width: 252px;
-  max-width: 202px;
+  //min-width: 252px;
+ // max-width: 202px;
   background: $white;
   transition: all 0.3s;
 }
@@ -101,18 +101,18 @@ body{
 .main-container{
     width: calc(100vw - 252px);
     padding: 18px 18px 0 18px;
-    transition: all 0.3s;
-
-  //   -webkit-transition: all 0.5s ease;
-  //   -moz-transition: all 0.5s ease;
-  //   transition: all 0.5s ease;
-  //  // width: calc(100vw - 50px);
-  //   position: relative;
-  //   z-index: 0;
-  //   margin: 0 auto;
-    
+    transition: all 0.3s;   
 }
-
+.sidebar-container{
+  width: calc(100vw - 50px);
+  padding: 18px 18px 0 18px;
+  -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    position: relative;
+    z-index: 0;
+    margin: 0 auto;
+}
 ul{
   margin-bottom: 0 !important;
 }
@@ -423,11 +423,10 @@ li {
   display: block;
   text-decoration: none;
 
-  // opacity: .5;
-  // cursor: pointer;
-  // -webkit-transition: all 0.5s ease-in;
-  // -moz-transition: all 0.5s ease-in;
-  // transition: all 0.5s ease-in;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
 
 }
 .menu-link{
@@ -491,8 +490,7 @@ li .activate .menu-list i{
 
 
 // .sidebar-toggle{
-//   //width: calc(100vw - 1123px);
-//   margin-top: 25px;
+//   margin-top: 35px;
 // }
 
 // .menu-btn{
@@ -501,7 +499,7 @@ li .activate .menu-list i{
 //   font-size: 20px;
 //   margin-left: 10px;
 
-//   position: fixed;
+//   //position: fixed;
 //   top: 20px;
 //   right: 0;
 //   bottom: 0;
@@ -510,28 +508,70 @@ li .activate .menu-list i{
 //   -moz-transition: all 0.5s ease;
 //   transition: all 0.5s ease;
 //   z-index: 1;
-//   font-size: 30px;
+//   font-size: 25px;
 //   width: 30px;
 //   height: 30px;
 //   cursor: pointer;
 
 // }
 
-// .sideBarmenu .menu-btn{
-//   -webkit-transition: all 0.5s ease;
-//   -moz-transition: all 0.5s ease;
-//   transition: all 0.5s ease;
-//   position: absolute;
-//   top: 60px;
-//   right: 0;
-//   bottom: 0px;
-//   left: -3px;
-//   height: 45px;
-//   color: $primary-color;
-//   z-index: 1; 
-// }
-
-
+.menu-btn{
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+ // position: absolute;
+ // top: 60px;
+  right: 0;
+  bottom: 0px;
+  left: -3px;
+  height: 45px;
+  color: $primary-color;
+  z-index: 1; 
+  background: none;
+  border: none;
+  font-size: 24px;
+  // margin-left: 10px;
+}
+.menu-btn .tooltip-text {
+  visibility: hidden;
+  background:$tooltip-color;
+  color: $white;
+  text-align: center;
+  border-radius: 3px;
+  display: block;
+  z-index: 1;
+  padding: 0 3px;
+  font-size: 10px;
+}
+.menu-btn:hover .tooltip-text {
+  visibility: visible;
+}
+.window-close{
+  right: 0;
+  bottom: 0px;
+  left: -3px;
+  height: 45px;
+  color: $primary-color;
+  z-index: 1; 
+  background: none;
+  border: none;
+  font-size: 24px;
+  float: right;
+}
+.window-close .tooltip-text {
+  visibility: hidden;
+  background:$tooltip-color;
+  color: $white;
+  text-align: center;
+  border-radius: 3px;
+  display: block;
+  z-index: 1;
+  padding: 0 3px;
+  font-size: 10px;
+}
+.window-close:hover .tooltip-text {
+  visibility: visible;
+}
 /****************************DashBoard page************************/
 .dashboard-bx{
   a{
