--- a/src/index.scss
+++ b/src/index.scss
@@ -1726,6 +1726,27 @@ select:focus {
   right: -61px;
   font-size: 14px;
 }
+.btn-outline-danger{
+  border: none;
+  border-color: $reject-red;
+  color: $reject-red;
+}
+.btn-outline-danger:hover{
+  border: none;
+  background-color: $reject-red;
+  color: $white;
+}
+.btn-outline-success{
+  border: none;
+  border-color: $accept-green;
+  color: $accept-green;
+}
+.btn-outline-success:hover{
+  border: none;
+  border-color: $accept-green;
+  background-color: $accept-green;
+  color: $white;
+}
 // .add-price{
 //   margin:auto;
 // }
@@ -2313,7 +2334,7 @@ bottom: 50%;
   width: 305px;
 }
 .main-container .sub-filter .form-control{
-  width: 263px;
+  width: 232px;
 }
 input.form-control.date-form {
   width: auto;
