--- a/src/index.scss
+++ b/src/index.scss
@@ -473,18 +473,28 @@ li:hover .menu-link{
     display: inline-block;
     margin: 0 8px;
 }
-.user_manag i{
+.user-manag i{
   background-position: -19px -99px;
 }
-.prdt_cate i{ background-position: -19px -382px;}
+.prdt-cate i{ background-position: -19px -382px;}
 .product i{ background-position: -19px -306px;}
-.order i{ background-position: -19px -520px;}
+.vehicle i{background-position: -19px -520px;}
 .coupon i{ background-position: -19px -448px;}
-.pay_manag i{ background-position: -19px -167px;}
-.report_manag i{ background-position: -19px -237px;}
+.pay-manag i{ background-position: -19px -167px;}
+.report-manag i{ background-position: -19px -237px;}
 .faq i{ background-position: -19px -589px;}
 .static i{ background-position: -19px -92px;}
 .set i{ background-position: -19px -660px;}
+.order i{
+  background-image: url(../src/assets/images/AgroSprit_menuicons-new.png);
+  background-repeat: no-repeat;
+  background-position:-18px -747px;
+}
+.dc-manag i{
+    background-image: url(../src/assets/images/AgroSprit_menuicons-new.png);
+    background-repeat: no-repeat;
+    background-position:-18px -817px;
+}
 
 li:hover .menu-list i{
   background-position-x: -59px;
